--- a/template/templ.html
+++ b/template/templ.html
@@ -20,7 +20,7 @@
 		<div class="item active">
 			<aside class="andijan">
 				<div class="shapeuz">
-					<center><img src="img/telecomtv.png"></center>
+					<center><img src="img/logo.png"></center>
 				</div>
 				<div class="shape">
 					<p class="country"><span class="glyphicon glyphicon-map-marker"></span>Андижан</p>
