Squashed commit of the following:
commit 282fe33345062b37f19eb784c22f8b7d01f25808
Merge: 41281ec 4287a38
Author: Okil <karimov.oqil@gmail.com>
Date:   Tue Aug 22 12:18:00 2017 +0500

    Merge branch 'master' into develop

commit 41281ecdc358b7a25485ec74e4d1a14312d2d896
Author: Okil <karimov.oqil@gmail.com>
Date:   Tue Aug 22 12:16:48 2017 +0500

    templ

commit a16bbdd73884765c6f5b885a75d7ed7c46405621
Author: Okil <karimov.oqil@gmail.com>
Date:   Tue Aug 22 12:05:41 2017 +0500

    logo

commit 0372ca0eb1f072611f0c98516ceb06c7921cbd1d
Author: Okil <karimov.oqil@gmail.com>
Date:   Tue Aug 22 12:04:38 2017 +0500

    Deleted Brand Icon

commit b64b634956e13772d0d10cd3f7b9141500338534
Author: Okil <karimov.oqil@gmail.com>
Date:   Tue Aug 22 12:02:30 2017 +0500

    Icon Text Map

commit a9ea1620921335cf29f1651e743eea2fc4f20395
Author: Okil <karimov.oqil@gmail.com>
Date:   Tue Aug 22 11:12:35 2017 +0500

    Add weather map

commit 6479a165db539d7297d62b1e71467c7da39b4b7b
Author: Okil <karimov.oqil@gmail.com>
Date:   Tue Aug 22 10:48:41 2017 +0500

    Fixed bug in html

commit 445a80f3429ebae59f330f8eaa56d24970e6714d
Author: Okil <karimov.oqil@gmail.com>
Date:   Tue Aug 22 10:33:58 2017 +0500

    delete text in dict

commit 01b6d19d6243f69ddf31d5ac9a4b05d46e7113b4
Author: Okil <karimov.oqil@gmail.com>
Date:   Mon Aug 21 20:05:03 2017 +0500

    clear

commit 16a88a3ed5f392eeb12fa45ebb835023c4a637df
Merge: 478b6a0 35fb7b6
Author: Okil <karimov.oqil@gmail.com>
Date:   Mon Aug 21 20:04:44 2017 +0500

    Merge remote-tracking branch 'origin/develop' into develop

    # Conflicts:
    #	jinja.py

commit 478b6a0f4393c004625a1cf44a4d08e01663f5b5
Author: Okil <karimov.oqil@gmail.com>
Date:   Mon Aug 21 20:03:26 2017 +0500

    clear

commit 27b9f59ebd40a0d7e7853000288a21814cb5efdc
Author: Okil <karimov.oqil@gmail.com>
Date:   Mon Aug 21 20:00:51 2017 +0500

    .idea

commit 35fb7b6e250ca98fe66e6fb1a35960a32582c02e
Author: Okil <karimov.oqil@gmail.com>
Date:   Mon Aug 21 

--- a/template/templ.html
+++ b/template/templ.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8">
 </head>
 <link rel="stylesheet" type="text/css" href="css/main.css">
+<link rel="stylesheet" type="text/css" href="css/weather.css">
 <body>
 
 <span class="clock"></span>
@@ -19,7 +20,7 @@
 		<div class="item active">
 			<aside class="andijan">
 				<div class="shapeuz">
-					<center><img src="img/telecomtv.png"></center>
+					<center><img src="img/logo.png"></center>
 				</div>
 				<div class="shape">
 					<p class="country"><span class="glyphicon glyphicon-map-marker"></span>Андижан</p>
@@ -214,7 +215,7 @@
 				</div>
 				<div class="shape">
 					<p class="country"><span class="glyphicon glyphicon-map-marker"></span>Каракалпакстан</p>
-					<p class="country date"><span class="glyphicon glyphicon-calendar"></span>{{ karakalpakistan[0][1]['date'] }}, {{ karakalpakistan[0][1]['day'] }}</p>
+					<p class="country date"><span class="glyphicon glyphicon-calendar"></span>{{ karakalpakistan[0][0]['date'] }}, {{ karakalpakistan[0][0]['day'] }}</p>
 				</div>
 				<div class="forecast">
 					<div class="col-lg-4 bordered">
@@ -277,7 +278,7 @@
 				</div>
 				<div class="shape">
 					<p class="country"><span class="glyphicon glyphicon-map-marker"></span>Кашкадарья</p>
-					<p class="country date"><span class="glyphicon glyphicon-calendar"></span>{{ qashqadaryo[0][1]['date'] }}, {{ qashqadaryo[0][1]['day'] }}</p>
+					<p class="country date"><span class="glyphicon glyphicon-calendar"></span>{{ qashqadaryo[0][0]['date'] }}, {{ qashqadaryo[0][0]['day'] }}</p>
 				</div>
 				<div class="forecast">
 					<div class="col-lg-4 bordered">
@@ -340,7 +341,7 @@
 				</div>
 				<div class="shape">
 					<p class="country"><span class="glyphicon glyphicon-map-marker"></span>Навои</p>
-					<p class="country date"><span class="glyphicon glyphicon-calendar"></span>{{ navoi[0][1]['date'] }}, {{ navoi[0][1]['day'] }}</p>
+					<p class="country date"><span class="glyphicon glyphicon-calendar"></span>{{ navoi[0][0]['date'] }}, {{ navoi[0][0]['day'] }}</p>
 				</div>
 				<div class="forecast">
 					<div class="col-lg-4 bordered">
@@ -403,7 +404,7 @@
 				</div>
 				<div class="shape">
 					<p class="country"><span class="glyphicon glyphicon-map-marker"></span>Наманган</p>
-					<p class="country date"><span class="glyphicon glyphicon-calendar"></span>{{ namangan[0][1]['date'] }}, {{ namangan[0][1]['day'] }}</p>
+					<p class="country date"><span class="glyphicon glyphicon-calendar"></span>{{ namangan[0][0]['date'] }}, {{ namangan[0][0]['day'] }}</p>
 				</div>
 				<div class="forecast">
 					<div class="col-lg-4 bordered">
@@ -466,7 +467,7 @@
 				</div>
 				<div class="shape">
 					<p class="country"><span class="glyphicon glyphicon-map-marker"></span>Самарканд</p>
-					<p class="country date"><span class="glyphicon glyphicon-calendar"></span>{{ samarqand[0][1]['date'] }}, {{ samarqand[0][1]['day'] }}</p>
+					<p class="country date"><span class="glyphicon glyphicon-calendar"></span>{{ samarqand[0][0]['date'] }}, {{ samarqand[0][0]['day'] }}</p>
 				</div>
 				<div class="forecast">
 					<div class="col-lg-4 bordered">
@@ -529,7 +530,7 @@
 				</div>
 				<div class="shape">
 					<p class="country"><span class="glyphicon glyphicon-map-marker"></span>Термез</p>
-					<p class="country date"><span class="glyphicon glyphicon-calendar"></span>{{ termez[0][1]['date'] }}, {{ termez[0][1]['day'] }}</p>
+					<p class="country date"><span class="glyphicon glyphicon-calendar"></span>{{ termez[0][0]['date'] }}, {{ termez[0][0]['day'] }}</p>
 				</div>
 				<div class="forecast">
 					<div class="col-lg-4 bordered">
@@ -592,7 +593,7 @@
 				</div>
 				<div class="shape">
 					<p class="country"><span class="glyphicon glyphicon-map-marker"></span>Сырдарья</p>
-					<p class="country date"><span class="glyphicon glyphicon-calendar"></span>{{ sirdaryo[0][1]['date'] }}, {{ sirdaryo[0][1]['day'] }}</p>
+					<p class="country date"><span class="glyphicon glyphicon-calendar"></span>{{ sirdaryo[0][0]['date'] }}, {{ sirdaryo[0][0]['day'] }}</p>
 				</div>
 				<div class="forecast">
 					<div class="col-lg-4 bordered">
@@ -655,7 +656,7 @@
 				</div>
 				<div class="shape">
 					<p class="country"><span class="glyphicon glyphicon-map-marker"></span>Ташкент обл.</p>
-					<p class="country date"><span class="glyphicon glyphicon-calendar"></span>{{ tashkentobl[0][1]['date'] }}, {{ tashkentobl[0][1]['day'] }}</p>
+					<p class="country date"><span class="glyphicon glyphicon-calendar"></span>{{ tashkentobl[0][0]['date'] }}, {{ tashkentobl[0][0]['day'] }}</p>
 				</div>
 				<div class="forecast">
 					<div class="col-lg-4 bordered">
@@ -718,7 +719,7 @@
 				</div>
 				<div class="shape">
 					<p class="country"><span class="glyphicon glyphicon-map-marker"></span>Фергана</p>
-					<p class="country date"><span class="glyphicon glyphicon-calendar"></span>{{ fergana[0][1]['date'] }}, {{ fergana[0][1]['day'] }}</p>
+					<p class="country date"><span class="glyphicon glyphicon-calendar"></span>{{ fergana[0][0]['date'] }}, {{ fergana[0][0]['day'] }}</p>
 				</div>
 				<div class="forecast">
 					<div class="col-lg-4 bordered">
@@ -781,7 +782,7 @@
 				</div>
 				<div class="shape">
 					<p class="country"><span class="glyphicon glyphicon-map-marker"></span>Хорезм</p>
-					<p class="country date"><span class="glyphicon glyphicon-calendar"></span>{{ horezm[0][1]['date'] }}, {{ horezm[0][1]['day'] }}</p>
+					<p class="country date"><span class="glyphicon glyphicon-calendar"></span>{{ horezm[0][0]['date'] }}, {{ horezm[0][0]['day'] }}</p>
 				</div>
 				<div class="forecast">
 					<div class="col-lg-4 bordered">
@@ -844,7 +845,7 @@
 				</div>
 				<div class="shape">
 					<p class="country"><span class="glyphicon glyphicon-map-marker"></span>Ташкент</p>
-					<p class="country date"><span class="glyphicon glyphicon-calendar"></span>{{ tashkent[0][1]['date'] }}, {{ tashkent[0][1]['day'] }}</p>
+					<p class="country date"><span class="glyphicon glyphicon-calendar"></span>{{ tashkent[0][0]['date'] }}, {{ tashkent[0][0]['day'] }}</p>
 				</div>
 				<div class="forecast">
 					<div class="col-lg-4 bordered">
